[project]
name = "rdap"
version = "1.6.0"
description = "Registration Data Access Protocol tools"
authors = [{ name = "20C", email = "code@20c.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">= 3.8"

repository = "https://github.com/20c/rdap"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "googlemaps >= 4",
    "munge[yaml] >= 1",
    "phonenumbers >= 8",
    "pydantic >= 2",
    "requests >= 2",
    "setuptools>=75.1.0",
]


[project.scripts]
rdap = "rdap.cli:main"


[project.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"


[project.optional-dependencies]
dev = [
    "coverage >= 7",
    "pytest >= 8",
    "pytest-filedata >= 1",
    "pytest-cov >= 5",
    "tox >= 4",
    "tox-gh-actions >= 3",
    "tox-uv>=1.13.0",
    "bandit >= 1",
    "mypy >= 1",
    "pre-commit >= 3",
    "ruff >= 0",
    # docs
    "markdown >= 3",
    "markdown-include >= 0",
    "mkdocs >= 1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "I",  # isort
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
